2002-03-07  Richard Hestilow  <hestilow@ximian.com>
	
	* sound-properties-capplet.c (main): Okay, so I'm an idiot.

2002-03-06  Richard Hestilow  <hestilow@ximian.com>

	* sound-properties-capplet.c (main): Remove textdomain stuff.
	I'm not 100% certain this is correct, but none of the other capplets
	have it.
	
2002-03-07  Lauris Kaplinski  <lauris@ximian.com>

	* sound-properties-capplet.c: Do not include unused <esd.h>

2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* sound-properties-capplet.c: s/PACKAGE/GETTEXT_PACKAGE/g

2002-02-11  Seth Nickell  <snickell@stanford.edu>

	* sound-properties-capplet.c: (setup_dialog),
	(dialog_button_clicked_cb), (main):

	Convert to instant apply.

2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* sound-properties-capplet.c (create_dialog): Use g_object_set_data,
	use g_signal_connect
	(dialog_button_clicked_cb): GtkDialog instead of GnomeDialog
	(create_dialog): Use gtk_widget_set_size_request

2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* sound.desktop.in:

	Add categories field to .desktop file.

2002-01-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:

	Install icons into the pixmaps directory so the Panel
	& Nautilus will pick up on them.

2002-01-14  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (bin_PROGRAMS): Rename binary gnome2-sound-properties

2002-01-08  Richard Hestilow  <hestilow@ximian.com>

	* Port to GNOME 2.0.

2001-11-18  Richard Hestilow  <hestilow@ximian.com>

	* Makefile.am (sound_properties_control_LDADD): Add libsounds.a.

	* prefs-widget.c (apply_settings): Export our settings to
	gnome-config (needed by gnome-libs). Also save and reload event
	sounds.
	(create_dialog): Add a SoundView on the sound events.

	* sound-properties.glade: Add a tab for the sound events.

2001-10-12  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Make OAF file creation generic

2001-09-28  Bradford Hovinen  <hovinen@ximian.com>
